# P-MagikSwipe

./: .commitlintrc.json  .gitignore  AGENTS.md  README.md  SEMANTIC_RELEASE_MANUAL.md  convert_videos.sh  docker-compose.yml  open-viewer.sh  run_tests.py  upload_universe.py
.github/workflows/: commitlint.yml  grokcode-interactive.yml  grokcode-patterns.yml  grokcode-review.yml  release.yml
api/: Dockerfile  main.py  models.py  prompts.py  prompts.py.bak  publish_universe.py  requirements.txt  test_endpoints.py
api/projet/: Dockerfile  README.md  __init__.py  db_uploader.py  generators.py  generators.py.bak  main.py  publish_universe.py  requirements.txt  translation_generator.py
api/routes/: generation.py  jobs.py  media.py  prompts.py  universes.py
api/services/: __init__.py  job_service.py  (+2 more)
backend/: Dockerfile  MANUAL.md  README.md  TESTING_GUIDE.md  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  seed_supabase_test_data.py
backend/database/: __init__.py  connection.py  models.py
backend/routes/: __init__.py  admin.py  generation.py  jobs.py  sync.py  universes.py
backend/schemas/: __init__.py
backend/services/: __init__.py  generation_service.py  job_service.py  storage_service.py  supabase_service.py  sync_service.py
backend/tests/: README.md  __init__.py  conftest.py  test_admin.py  test_assets.py  test_generation.py  test_jobs_sync.py  test_music_prompts.py  test_replicate_integration.py  test_universes.py
backend/utils/: __init__.py
documentation/: DOCKER_USAGE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  START_HERE.md  SUMMARY.md
generator/: Dockerfile  requirements.txt
projet/: .env.example  Dockerfile  README.md  generators.py  main.py  publish_universe.py  requirements.txt  run.sh  upload_universe.py  viewer.html
storage/: default_prompts.json  index.json  prompts.yaml
viewer/: ACCES.md  Dockerfile  SYNC.md  default.conf  gallery.html  index.html  index.html.bak  manifest.json  slideshow.html
(+74 files in other folders)
