[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magikswipe-backend"
version = "2.0.0"
description = "Backend API for MagikSwipe - AI-powered children's learning app"
authors = [{name = "MagikSwipe Team"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "supabase==2.0.0",
    "replicate==0.20.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-slugify==8.0.1",
    "pillow==10.1.0",
    "requests==2.31.0",
    "deep-translator==1.11.4",
    "pyyaml==6.0.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.24.1",
    "pytest-cov==4.1.0",
]

[tool.semantic_release]
# Core settings for full repo (backend + viewer)
version_toml = ["pyproject.toml:project.version"]
version_variables = ["main.py:version"]
branch = "main"
build_command = "python -m build --sdist --wheel ."
upload_to_release = true

# Commit parser (conventional commits)
commit_parser = "conventional"
[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

# Changelog settings (excludes noise commits)
[tool.semantic_release.changelog]
file = "../CHANGELOG.md"
categories = [
    { title = "🚀 Features", labels = ["feat"] },
    { title = "🐛 Fixes", labels = ["fix"] },
    { title = "🧹 Other Changes", labels = ["chore", "docs", "refactor", "style", "test", "ci"] }
]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]